starting vue front end

--- a/Pipeline-crm-front/public/product.html
+++ b/Pipeline-crm-front/public/product.html
@@ -15,50 +15,49 @@
   <body>
     <div class="container-fluid">
       <div class="row flex-nowrap">
-        <div class="col-auto col-md-3 col-xl-2 px-sm-2 px-0 bg-grey">
-          <div class="d-flex flex-column align-items-center align-items-sm-start px-3 pt-2 text-white min-vh-100 bg-grey">
-              <ul class="nav nav-pills flex-column mb-sm-auto mb-0 align-items-center align-items-sm-start" id="menu">
-                  <li class="nav-item">
-                      <a href="index.html" class="nav-link align-middle px-0">
-                          <i class="fs-4 fa-solid fa-house"></i> <span class="ms-1 d-none d-sm-inline">Home</span>
-                      </a>
-                  </li>
-                  <li class="nav-item">
-                    <a href="team.html" class="nav-link align-middle px-0">
-                        <i class="fs-4 fa-solid fa-users"></i> <span class="ms-1 d-none d-sm-inline">Team</span>
-                    </a>
-                </li>
-                  <li>
-                      <a href="client.html" class="nav-link px-0 align-middle">
-                          <i class="fs-4 fa-solid fa-handshake"></i> <span class="ms-1 d-none d-sm-inline">Clients</span></a>
-                  </li>
-                  <li>
-                      <a href="contact.html" class="nav-link px-0 align-middle">
-                          <i class="fs-4 fa-solid fa-address-card"></i> <span class="ms-1 d-none d-sm-inline">Contacts</span></a>
-                  </li>
-                  <li>
-                      <a href="pipeline.html" class="nav-link px-0 align-middle">
-                          <i class="fs-4 fa-solid fa-chart-column"></i> <span class="ms-1 d-none d-sm-inline">Pipelines</span></a>
-                  </li>
-                  <li>
-                      <a href="product.html" class="nav-link px-0 align-middle">
-                          <i class="fs-4 fa-solid fa-briefcase"></i> <span class="ms-1 d-none d-sm-inline">Products</span></a>
-                  </li>
-                  <li>
-                    <a href="item.html" class="nav-link px-0 align-middle">
-                        <i class="fs-4 fa-solid fa-book"></i> <span class="ms-1 d-none d-sm-inline">Items</span></a>
-                  </li>
-                  <li>
-                    <a href="invoice.html" class="nav-link px-0 align-middle">
-                        <i class="fs-4 fa-solid fa-file-invoice-dollar"></i> <span class="ms-1 d-none d-sm-inline">Invoices</span></a>
-                  </li>
-                  <li>
-                    <a href="receipt.html" class="nav-link px-0 align-middle">
-                        <i class="fs-4 fa-solid fa-receipt"></i> <span class="ms-1 d-none d-sm-inline">Receipts</span></a>
-                  </li>
-              </ul>
+          <div class="col-auto col-md-3 col-xl-2 px-sm-2 px-0 bg-grey">
+              <div class="d-flex flex-column align-items-center align-items-sm-start px-3 pt-2 text-white min-vh-100 bg-grey">
+                  <ul class="nav nav-pills flex-column mb-sm-auto mb-0 align-items-center align-items-sm-start" id="menu">
+                      <li class="nav-item">
+                          <a href="index.html" class="nav-link align-middle px-0">
+                              <i class="fs-4 fa-solid fa-house"></i> <span class="ms-1 d-none d-sm-inline">Home</span>
+                          </a>
+                      </li>
+                      <li>
+                          <a href="team.html" data-bs-toggle="collapse" class="nav-link px-0 align-middle">
+                              <i class="fs-4 fa-solid fa-users"></i> <span class="ms-1 d-none d-sm-inline">Teams</span></a>
+                      </li>
+                      <li>
+                          <a href="client.html" class="nav-link px-0 align-middle">
+                              <i class="fs-4 fa-solid fa-handshake"></i> <span class="ms-1 d-none d-sm-inline">Clients</span></a>
+                      </li>
+                      <li>
+                          <a href="contact.html" data-bs-toggle="collapse" class="nav-link px-0 align-middle ">
+                              <i class="fs-4 fa-solid fa-address-card"></i> <span class="ms-1 d-none d-sm-inline">Contacts</span></a>
+                      </li>
+                      <li>
+                          <a href="pipeline.html" data-bs-toggle="collapse" class="nav-link px-0 align-middle">
+                              <i class="fs-4 fa-solid fa-chart-column"></i> <span class="ms-1 d-none d-sm-inline">Pipelines</span></a>
+                      </li>
+                      <li>
+                          <a href="product.html" class="nav-link px-0 align-middle">
+                              <i class="fs-4 fa-solid fa-briefcase"></i> <span class="ms-1 d-none d-sm-inline">Products</span></a>
+                      </li>
+                      <li>
+                        <a href="item.html" class="nav-link px-0 align-middle">
+                            <i class="fs-4 fa-solid fa-book"></i> <span class="ms-1 d-none d-sm-inline">Items</span></a>
+                      </li>
+                      <li>
+                        <a href="invoice.html" class="nav-link px-0 align-middle">
+                            <i class="fs-4 fa-solid fa-file-invoice-dollar"></i> <span class="ms-1 d-none d-sm-inline">Invoices</span></a>
+                      </li>
+                      <li>
+                        <a href="receipt.html" class="nav-link px-0 align-middle">
+                            <i class="fs-4 fa-solid fa-receipt"></i> <span class="ms-1 d-none d-sm-inline">Receipts</span></a>
+                      </li>
+                  </ul>
+              </div>
           </div>
-      </div>
           <div class="col py-3">
             <h1>Pipeline CRM</h1>
             <h2>Products</h2>
